--- a/sport.com/styles.css
+++ b/sport.com/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Liberation';
+    font-family: 'Liberation sans';
     src: url('./fonts/LiberationSans-Bold-webfont.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
@@ -7,12 +7,15 @@
 }
 
 @font-face {
-    font-family: 'Liberation';
+    font-family: 'Liberation sans';
     src: url('./fonts/LiberationSans-Regular-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
+}
 
+* {
+    font-family: 'Liberation sans', sans-serif;
 }
 
 *{
@@ -21,33 +24,52 @@
 }
 
 body{
-    /* background-image: url(images/background.jpg); */
+    background-image: url(images/background.jpg);
 }
 
 main{
-    border:solid black 10px ;
-    
+    border:solid black 20px ;
+    /* display: flex;
+    align-items: center; */
+    background-image: url(images/background.jpg);
 }
 
-img{
+
+.fighautpages{
+    
+    width: 100%;
+}
+
+.espace{
+    margin-left: 1%;
+    width: 40%;
+    color: orange;
+}
+
+
+.imghaut{
     margin-top: 5%;
     width: 50%;
     margin-bottom: 5%;
 }
 
-.titre{
-    display: flex;
-    flex-direction: column;
-    
-}
 
 .figcaption-titre{
     display: flex;
     align-items: center;
-    font-size: 110%;
-    margin-left: 15%;
-    width: 60%;
+    font-size: 100%;
+    width: 55%;
+    margin-left: 10%;
+    /* margin-left: 15%; */
 }
+
+.titre{
+    padding-right: 50%;
+}
+
+/* .navhautpages{
+    display:flex;
+} */
 
 a{
     text-decoration: none;
@@ -67,35 +89,60 @@ h1{
     font-size: 120%;
 }
 
-.haut_de_pages{
+/* .haut_de_pages{
     display: flex;
     justify-content: space-evenly;
 
+} */
+.imageacceuil{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 1%;
 }
 
 .images{
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 80%;
     /* margin-left:5%; */
     margin-top: -1%;
-    background-color: white;
+    /* background-color: white; */
 }
 
-.figcaption-boxe{
-    margin-top: -17%;
-    margin-left: 15%;
-    margin-bottom: 1%;
-}
 figure{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     margin-bottom: 5%;
 }
 
+.promo{
+    position: absolute;
+    color: orange;
+    background-color: black;
+    border-radius: 10px;
+    margin-top: 35%;
+    margin-left: 60%;
+    font-size: 150%;
+    width: 15%;
+    text-align: center;
+}
+.promo2{
+    position: absolute;
+    color: orange;
+    background-color: black;
+    /* margin-top: 35%; */
+    margin-left: 60%;
+    font-size: 150%;
+    width: 15%;
+    text-align: center;
+    border-radius: 10px;
+}
+
+
 .ancien-prix{
-    margin-left:60% ;
+    margin-left:45% ;
     width: 15%;
     text-decoration-line: line-through;
     /* margin-top: 2%; */
@@ -121,22 +168,24 @@ button{
     color: white;
     font-size: 100%;
     width: 35%;
-    margin-left: 15%;
+    margin-right: 20%;
     margin-top: -5%;
 }
 .bas_de_pages{
-    margin-top:15% ;
+    position: absolute;
+    margin-left: 10%;
+    margin-top: -5%;
     display: flex;
     justify-content: center;
     text-decoration: none;
     background-color: white;
-    border:solid white 15px;
+    width: 80%;
+    border:solid white 10px;
     border-radius: 15px;
-    position: sticky;
 }
 
 .fond{
-    
+    /* margin-top: 10%; */
     background-color:rgb(51, 51, 51) ;
     display: flex;
     align-items: center;
@@ -147,29 +196,75 @@ button{
    
 }
 .Livre{
-    width: 50%;
+    width: 40%;
 }
-.section_coté{
-    border-bottom: solid blue 10px;
-    border-width: 50%;
-}
-
 
 .coté{
     display: flex;
 }
 
+.barre {
+    width: 100%;
+    height: 2px;
+    background-color: #666; 
+ 
+}
+
+
 footer{
     background-color:rgb(51, 51, 51);
 }
+
+
+
 .footer-img{
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-around;
-    width: 10%;
+    width: 100%;
+    background-color:rgb(51, 51, 51)
 }
 
 .copyright{
     margin-top: 12%;
     color: white;
+    text-align: center;
+    background-color:rgb(51, 51, 51)
+}
+
+@media screen and (min-width:1024px){
+    *{
+        margin: 0%;
+        padding: 0%;
+    }
+
+
+
+    header{
+        display: flex;
+                background-image: url(images/background.jpg);
+                flex-direction: row;
+                justify-content: flex-end;
+                flex-wrap: wrap;
+                align-items: flex-start;
+        
+    }
+    .fighautpages{
+        display: flex;
+        align-items: flex-start;
+        width: 100%;
+    }
+    .titre{
+        position: absolute;
+        padding-right: 0%;
+        
+}
+
+main{
+    border:solid black 100px ;
+    /* display: flex;
+    align-items: center; */
+    background-image: url(images/background.jpg);
+}
+
+
 }
